Create a system class.

--- a/ProjectFiles/Application.vcxproj
+++ b/ProjectFiles/Application.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\Application\Main.cpp" />
+    <ClCompile Include="..\Code\Application\System.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Code\Application\System.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
