--- a/ProjectFiles/Application.vcxproj.filters
+++ b/ProjectFiles/Application.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="..\Code\Application\Main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\Application\System.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Code\Application\System.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
